Table users {
  id int [pk, increment]
  username varchar [unique, not null]
  password varchar [not null]
  role enum [not null, note: 'admin, direktur, hrd, pegawai']
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table password_reset_tokens {
  email varchar [pk]
  token varchar [not null]
  created_at timestamp
}

Table sessions {
  id varchar [pk]
  user_id int [ref: > users.id, null]
  ip_address varchar [null]
  user_agent text [null]
  payload text [not null]
  last_activity int [not null]
}

Table cache {
  key varchar [pk]
  value text [not null]
  expiration bigint [not null]
}

Table cache_locks {
  key varchar [pk]
  owner varchar [not null]
  expiration bigint [not null]
}

Table jobs {
  id int [pk, increment]
  queue varchar [not null]
  payload text [not null]
  attempts int [not null]
  reserved_at int [null]
  available_at int [not null]
  created_at int [not null]
}

Table job_batches {
  id varchar [pk]
  name varchar [not null]
  total_jobs int [not null]
  pending_jobs int [not null]
  failed_jobs int [not null]
  failed_job_ids text [not null]
  options text [null]
  cancelled_at int [null]
  created_at int [not null]
  finished_at int [null]
}

Table failed_jobs {
  id int [pk, increment]
  uuid varchar [unique, not null]
  connection text [not null]
  queue text [not null]
  payload text [not null]
  exception text [not null]
  failed_at timestamp [not null]
}

Table pegawai {
  id int [pk, increment]
  user_id int [ref: - users.id]
  nik varchar [unique, not null]
  nip varchar [unique]
  nama varchar [not null]
  jenis_pegawai_id int [ref: > jenis_pegawai.id]
  profesi_id int [ref: > profesi.id]
  jabatan_id int [ref: > jabatan.id]
  status_pegawai enum [null, note:'aktif, tidak aktif']
  tgl_masuk date
  pangkat_id int [ref: > pangkat.id]
  golongan_ruang_id int [ref: > golongan_ruang.id]
  tmt_cpns date
  tmt_pns date
  tmt_pangkat_akhir date
  masa_kerja date
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table pegawai_pribadi {
  id int [pk, increment]
  pegawai_id int [ref: - pegawai.id]
  pendidikan_terakhir enum [null, note: 'SMA/SMK Sederajat, D3, S1/D4, S2, S3']
  tanggal_lahir date
  jenis_kelamin enum('L','P')
  agama varchar
  status_perkawinan varchar [null, note: 'kawin, belum kawin, cerai hidup, cerai mati']
  alamat text
  no_telp varchar
  email varchar
  foto_path varchar [null, note: 'path file foto pegawai']
  ktp_file_path varchar [null, note: 'path file KTP']
  kk_file_path varchar [null, note: 'path file kartu keluarga']
  buku_nikah_file_path varchar [null, note: 'path file buku nikah']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table profesi_pegawai {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  profesi_id int [ref: > profesi.id]
  is_current boolean [default: false]
  started_at date [null]
  ended_at date [null]
  note text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table pangkat_pegawai {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  pangkat_id int [ref: > pangkat.id]
  is_current boolean [default: false]
  started_at date [null]
  ended_at date [null]
  note text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table jabatan_pegawai {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  jabatan_id int [ref: > jabatan.id]
  is_current boolean [default: false]
  started_at date [null]
  ended_at date [null]
  note text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table golongan_ruang_pegawai {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  golongan_ruang_id int [ref: > golongan_ruang.id]
  is_current boolean [default: false]
  started_at date [null]
  ended_at date [null]
  note text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table unit_kerja_pegawai {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  unit_kerja_id int [ref: > unit_kerja.id]
  is_current boolean [default: false]
  started_at date [null]
  ended_at date [null]
  note text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


Table jenis_pegawai {
  id int [pk, increment]
  nama varchar [not null, note: 'PNS, PPPK Penuh Waktu, PPPK Paruh Waktu, BLUD']
  created_at timestamp
  updated_at timestamp
}

Table profesi {
  id int [pk, increment]
  nama varchar [not null, note: 'Dokter, Bidan, Perawat, dll']
  kategori_tenaga varchar [note: 'Tenaga Kesehatan, Non Kesehatan']
  created_at timestamp
  updated_at timestamp
}

Table pendidikan {
  id int [pk, increment]
  pegawai_pribadi_id int [ref: > pegawai_pribadi.id]
  jenjang varchar
  institusi varchar
  jurusan varchar
  tahun_lulus int
  nomor_ijazah varchar [null]
  ijazah_file_path varchar [null, note: 'path file ijazah']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table jabatan {
  id int [pk, increment]
  nama varchar [not null]
  tmt_mulai date
  tmt_selesai date
  sk_file_path varchar [null, note: 'path file SK jabatan']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


Table unit_kerja {
  id int [pk, increment]
  nama varchar [not null]
  created_at timestamp
  updated_at timestamp
}


Table pangkat {
  id int [pk, increment]
  nama varchar [not null]
  pejabat_penetap varchar
  tmt_sk date
  sk_file_path varchar [null, note: 'path file SK pangkat']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table golongan_ruang {
  id int [pk, increment]
  nama varchar [not null, unique, note: 'I/a, I/b, I/c, I/d, II/a, II/b, II/c, II/d, III/a, III/b, III/c, III/d, IV/a, IV/b, IV/c, IV/d, IV/e']
  created_at timestamp
  updated_at timestamp
}

Table str {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  nomor_str varchar
  tanggal_terbit date
  tanggal_kadaluarsa date
  sk_file_path varchar [null, note: 'path file STR']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table sip {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  jenis_sip_id int [ref: > jenis_sip.id]
  nomor_sip varchar
  tanggal_terbit date
  tanggal_kadaluarsa date
  sk_file_path varchar [null, note: 'path file SIP']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

table jenis_sip{
    id int [pk, increment]
    nama varchar [not null, note: 'SIP Praktik Mandiri, SIP Praktik Bersama, SIP Praktik Rumah Sakit']
    created_at timestamp
    updated_at timestamp
}

Table penugasan_klinis {
  id int [pk, increment]
  pegawai_id int [ref: > pegawai.id]
  nomor_surat varchar
  tgl_mulai date
  tgl_kadaluarsa date
  dokumen_file_path varchar [null, note: 'path dokumen penugasan klinis']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table pasangan {
  id int [pk, increment]
  pegawai_pribadi_id int [ref: > pegawai_pribadi.id]
  nama_lengkap varchar [null]
  nik varchar [null]
  tempat_lahir varchar [null]
  tanggal_lahir date [null]
  pekerjaan varchar [null]
  instansi varchar [null]
  status_pernikahan varchar [null]
  tanggal_pernikahan date [null]
  nomor_buku_nikah varchar [null]
  status_tanggungan boolean [default: false]
  npwp_pasangan varchar [null]
  buku_nikah_file_path varchar [null, note: 'path file buku nikah pasangan']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table anak {
  id int [pk, increment]
  pegawai_pribadi_id int [ref: > pegawai_pribadi.id]
  nama_lengkap varchar [null]
  nik varchar [null]
  tempat_lahir varchar [null]
  tanggal_lahir date [null]
  jenis_kelamin varchar [null]
  status_anak varchar [null]
  pendidikan_terakhir varchar [null]
  status_tanggungan boolean [default: false]
  usia int [null]
  keterangan_disabilitas varchar [null]
  akta_kelahiran_file_path varchar [null, note: 'path file akta kelahiran']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table orang_tua {
  id int [pk, increment]
  pegawai_pribadi_id int [ref: > pegawai_pribadi.id]
  nama_ayah varchar [null]
  nama_ibu varchar [null]
  status_hidup varchar [null]
  alamat text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table kontak_darurat {
  id int [pk, increment]
  pegawai_pribadi_id int [ref: > pegawai_pribadi.id]
  nama_kontak varchar [null]
  hubungan_keluarga varchar [null]
  nomor_hp varchar [null]
  alamat text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table tanggungan_lain {
  id int [pk, increment]
  pegawai_pribadi_id int [ref: > pegawai_pribadi.id]
  nama varchar [null]
  hubungan_keluarga varchar [null]
  status_tanggungan varchar [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


// DIKLAT
Table jenis_diklat {
  id int [pk, increment]
  nama varchar [not null, note: 'ASN/Tenkes']
  created_at timestamp
  updated_at timestamp
}

Table kategori_diklat {
  id int [pk, increment]
  nama varchar [not null, note: 'Struktural, Fungsional, Teknis, Akred']
  created_at timestamp
  updated_at timestamp
}

Table jenis_biaya {
  id int [pk, increment]
  nama varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table diklat {
  id int [pk, increment]
  jenis_diklat_id int [ref: > jenis_diklat.id]
  kategori_diklat_id int [ref: > kategori_diklat.id]
  created_by int [ref: > pegawai.id, null]
  nama_kegiatan varchar
  status_kelayakan enum [not null, note: 'layak, tidak layak']
  status_validasi enum [not null, note: 'valid, tidak valid']
  penyelenggara varchar
  tanggal_mulai date
  tanggal_selesai date
  tempat varchar
  waktu time
  jp int [null]
  total_biaya decimal [null]
  jenis_biaya_id int [ref: > jenis_biaya.id, null]
  jenis_pelaksanaan enum [null, note: 'internal, external']
  catatan text [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table list_jadwal_diklat {
  id int [pk, increment]
  diklat_id int [ref: > diklat.id]
  pegawai_id int [ref: > pegawai.id]
  sertif_file_path varchar [null, note: 'path file sertifikat diklat']
  no_sertif varchar [null, note: 'nomor sertifikat diklat']
  uploaded_at timestamp
  status_diklat enum [not null, note: 'belum terlaksana, sedang terlaksana, sudah terlaksana']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}


Table notification {
  id int [pk, increment]
  user_id int [ref: > users.id]
  type varchar [not null, default: 'info']
  action_code varchar [null]
  action_payload json [null]
  title varchar
  message text
  is_read boolean [default: false]
  is_resolved boolean [default: false]
  unique_key varchar [null]
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, type) [name: 'notification_user_type_idx']
    (user_id, is_read) [name: 'notification_user_is_read_idx']
    (user_id, is_resolved) [name: 'notification_user_is_resolved_idx']
    (user_id, unique_key) [unique, name: 'notification_user_unique_key_unique']
  }
}

Table perubahan_data {
  id int [pk, increment]
  by_user int [ref: > users.id]
  fitur varchar [not null]
  status enum [not null, default: 'pending', note: 'pending, approved, rejected']
  note text [null]
  created_at timestamp
  updated_at timestamp
}

Table detail_perubahan_data {
  id int [pk, increment]
  id_perubahan_data int [ref: > perubahan_data.id]
  target_table varchar [not null]
  kolom varchar [not null]
  value text [null]
  old_value text [null]
  created_at timestamp
  updated_at timestamp
}

Table log_activity {
  id int [pk, increment]
  user_id int [ref: > users.id]
  activity varchar
  created_at timestamp
  updated_at timestamp
}


